projects/authos/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-service
  namespace: ingress-public
  annotations:
    load-balancer.hetzner.cloud/name: "authos-lb"
    load-balancer.hetzner.cloud/type: lb11
    load-balancer.hetzner.cloud/location: hel1
    load-balancer.hetzner.cloud/use-private-ip: "true"
    load-balancer.hetzner.cloud/private-subnet-ip-range: "10.0.4.0/24"
    load-balancer.hetzner.cloud/uses-proxyprotocol: "true"
    load-balancer.hetzner.cloud/private-ipv4: "10.0.4.2"
    load-balancer.hetzner.cloud/algorithm-type: "round_robin"

spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: ingress-nginx
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
