projects/authos/main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authos-lb-ingress
  namespace: authos
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: public-nginx
  rules:
    - host: authos.tosak.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authos-ui
                port:
                  number: 80
    - host: api.authos.tosak.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authos-api
                port:
                  number: 80
